force-app/main/default/objects/GithubUser__c/GithubUser__c.object-meta.xml
<CustomObject>
    <label>GithubUser</label>
    <nameField>
        <label>Login</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GithubUsers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>