force-app/main/default/objects/GithubUser__c/fields/Github_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Github_User_Id__c</fullName>
    <externalId>true</externalId>
    <label>Github User Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>