force-app/main/default/objects/GithubUser__c/fields/html_url__c.field-meta.xml
<CustomField>
    <fullName>html_url__c</fullName>
    <label>html url</label>
    <type>Url</type>
</CustomField>