force-app/main/default/objects/GithubUser__c/fields/public_gists__c.field-meta.xml
<CustomField>
    <fullName>public_gists__c</fullName>
    <label>public_gists</label>
    <length>18</length>
    <type>Text</type>
</CustomField>