force-app/main/default/objects/GithubUser__c/fields/public_repos__c.field-meta.xml
<CustomField>
    <fullName>public_repos__c</fullName>
    <label>public_repos</label>
    <length>18</length>
    <type>Text</type>
</CustomField>